2016-03-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser): Fix compilation when configured with
	--enable-tiny plus --enable-browser.
	* src/rcfile.c: Tweak some comments and reshuffle some lines.

2016-03-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (grab_and_store): Do not accept 'header" and 'magic'
	commands for the default syntax.  This fixes Savannah bug #47323.
	* src/rcfile.c (pick_up_name): Fold the parsing of a linter and
	formatter command into a single routine.
	* src/rcfile.c (parse_header_exp, parse_magic_exp, grab_and_store):
	Elide the first two functions, and reshuffle parameters in the last.
	* src/rcfile.c (parse_syntax, parse_rcfile), src/color.c
	(color_update): Turn the linked list of syntaxes upside-down, so that
	the last-defined one comes first, so that searching can stop at the
	first match instead of always having to run through the entire list.
	* src/rcfile.c: Rename a variable to better fit its new role.

2016-03-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_syntax): Produce an adequate error message
	when the syntax name is unquoted.  This fixes Savannah bug #47324.
	* src/rcfile.c (parse_syntax): Use the grab_and_store() function
	also for gathering up extension regexes.

2016-03-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (found_in_list): Don't bother keeping the compiled
	regular expression when it matched -- drop this tiny optimization
	for when opening multiple files.  Instead stop calling malloc().
	* src/nano.h: Delete a now-unused struct member.
	* src/global.c (free_list_item): Elide this now too tiny function.
	* scr/global.c (thanks_for_all_the_fish): Rename three variables.
	* src/rcfile.c (parse_colors): Tweak a few things.
	* src/color.c (color_update): Rename a variable.

2016-03-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_syntax), src/color.c (color_update): Don't